--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Test for koombea app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node dist/src/index.js",
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --exec ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,30 @@
   "bugs": {
     "url": "https://github.com/horaciojesusgg/horacio-koombea/issues"
   },
-  "homepage": "https://github.com/horaciojesusgg/horacio-koombea#readme"
+  "homepage": "https://github.com/horaciojesusgg/horacio-koombea#readme",
+  "dependencies": {
+    "@types/moment": "^2.13.0",
+    "@types/multer": "^1.4.7",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.10.0",
+    "tsyringe": "^4.7.0",
+    "typeorm": "^0.3.12",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.3",
+    "@types/uuid": "^9.0.1",
+    "nodemon": "^2.0.21",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
+  }
 }
