--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/horaciojesusgg/horacio-koombea#readme",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/express-jwt": "^7.4.2",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/moment": "^2.13.0",
     "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.0",
@@ -27,6 +31,7 @@
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.10.0",
