--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
     "@types/uuid": "^9.0.1",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.21",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
