backend done, encryption done, frontend OK

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ DB_USERNAME = postgres
 DB_PASSWORD = example
 DB_NAME = horacio-test-koombea-db
 JWT_SECRET = secret_key_horacio
+CRYPTO_SECRET_KEY = my-super-awesome-secret-key
