--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
