--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "NODE_ENV=production node dist/src/index.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "typeorm": "typeorm-ts-node-esm"
   },
   "repository": {
     "type": "git",
